Update CheckCommand to use new proposed syntax
* Functionality will be plumbed in the following commits
* Tidy up the integration test
  * removing old/broken tests
  * dropping record format specfic database layouts
  * check only important parts of database layouts as formatted database
    layout is stored internally.
  * use AssertJ's semantical syntax

Co-authored-by: Emma Holmberg Ohlsson <emma.holmberg.ohlsson@neo4j.com>